feature/improvement: support stdc++11 until stdc++17.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,11 @@ set(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT
 
 # Include necessary modules
 include(FindPkgConfig)
-include(FetchContent)
+include(CheckCXXCompilerFlag)
+
+check_cxx_compiler_flag("-std=c++17" COMPILER_SUPPORTS_CXX17)
+check_cxx_compiler_flag("-std=c++14" COMPILER_SUPPORTS_CXX14)
+check_cxx_compiler_flag("-std=c++11" COMPILER_SUPPORTS_CXX11)
 
 # Set the default build type to Release if not specified
 if(NOT CMAKE_BUILD_TYPE)
@@ -69,6 +73,22 @@ set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -fPIC")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fPIC")
 set(CMAKE_C_FLAGS_DEBUG "-g -O0 -fPIC")
 set(CMAKE_C_FLAGS_RELEASE "-O3 -fPIC")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
-set(CMAKE_CXX_STANDARD 17)
+if(COMPILER_SUPPORTS_CXX17)
+  set(CMAKE_CXX_STANDARD 17)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+  add_definitions(-DCXXSTD_17)
+  message(STATUS "Use std=c++17...")
+elseif(COMPILER_SUPPORTS_CXX14)
+  set(CMAKE_CXX_STANDARD 14)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+  add_definitions(-DCXXSTD_14)
+  message(STATUS "Use std=c++14...")
+elseif(COMPILER_SUPPORTS_CXX11)
+  set(CMAKE_CXX_STANDARD 11)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  add_definitions(-DCXXSTD_11)
+  message(STATUS "Use std=c++11...")
+else()
+    message(FATAL_ERROR "Your compiler does not support C++11 or higher.")
+endif()
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
